--- a/admin/templates/index.html
+++ b/admin/templates/index.html
@@ -1,3 +1,4 @@
 <h1>{siteTitle}</h1>
-<p>{siteMotto}</p>
-<p>{postsList}</p>
+<ul class="columns"><li class="case left"><a href="index.html" class="droid bouton">Home</a></li><li class="case right"><a href="admin/main.php" class="droid bouton">Administration</a></ul>
+<p class="droid">{siteMotto}</p>
+<p class="droid">{postsList}</p>
