--- a/admin/templates/resumepost.html
+++ b/admin/templates/resumepost.html
@@ -1,2 +1,3 @@
-<h2><a href="{postUrl}">{postTitle}</a></h2>
+<h2><a href="{postUrl}" class="titlenick">{postTitle}</a></h2>
 <p>{postResume}</p>
+<hr class="separator">
