--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html {
   background-color: white;
   text-align:justify;
   text-justify: inter-word;
-  font-family: "Open Sans" , Verdana;
+  font-family: "Free Sans" , Verdana;
 }
 
 .titlenick {
@@ -73,8 +73,8 @@ a.bouton:visited {
  background-color:#663366;
  } 
 
-h1,h2,h3,h4,h5,h6,li,p {
-  font-family: "Open Sans" , Verdana;
+.free_sans,h1,h2,h3,h4,h5,h6,li,p {
+  font-family: "Free Sans" , Verdana;
   font-weight: 400;
 }
 
